@@ -50,6 +50,7 @@ struct SCIP_HeurData
    int                   nindconss;          /**< number of indicator constraints */
    SCIP_CONS**           indconss;           /**< indicator constraints */
    SCIP_Bool*            solcand;            /**< bitset of indicator variables in solution candidate */
+   SCIP_Real             obj;                /**< objective of previously stored solution */
    SCIP_Bool             oneopt;             /**< whether the one-opt heuristic should be started */
    SCIP_CONSHDLR*        indicatorconshdlr;  /**< indicator constraint handler */
    SCIP_SOL*             lastsol;            /**< last solution considered for improvement */
@@ -219,7 +220,7 @@ SCIP_RETCODE trySolCandidate(
    assert( solcand != NULL );
    assert( nfoundsols != NULL );
 
-   SCIPdebugMsg(scip, "Trying to generate feasible solution with indicators from solution candidate ...\n");
+   SCIPdebugMsg(scip, "Trying to generate feasible solution with indicators from solution candidate (obj: %f) ...\n", heurdata->obj);
    *nfoundsols = 0;
 
    SCIP_CALL( SCIPstartProbing(scip) );
@@ -532,6 +533,7 @@ SCIP_RETCODE SCIPincludeHeurIndicator(
    heurdata->solcand = NULL;
    heurdata->lastsol = NULL;
    heurdata->indicatorconshdlr = NULL;
+   heurdata->obj = SCIPinfinity(scip);
 
    /* include primal heuristic */
    SCIP_CALL( SCIPincludeHeurBasic(scip, &heur,
@@ -566,7 +568,8 @@ SCIP_RETCODE SCIPheurPassIndicator(
    SCIP_HEUR*            heur,               /**< indicator heuristic */
    int                   nindconss,          /**< number of indicator constraints */
    SCIP_CONS**           indconss,           /**< indicator constraints */
-   SCIP_Bool*            solcand             /**< values for indicator variables in partial solution */
+   SCIP_Bool*            solcand,            /**< values for indicator variables in partial solution */
+   SCIP_Real             obj                 /**< objective of solution */
    )
 {
    SCIP_HEURDATA* heurdata;
@@ -582,6 +585,9 @@ SCIP_RETCODE SCIPheurPassIndicator(
    heurdata = SCIPheurGetData(heur);
    assert( heurdata != NULL );
 
+   if ( obj >= heurdata->obj )
+      return SCIP_OKAY;
+
    /* copy indicator information */
    if ( heurdata->indconss != NULL )
       SCIPfreeBlockMemoryArray(scip, &(heurdata->indconss), heurdata->nindconss);
@@ -594,6 +600,7 @@ SCIP_RETCODE SCIPheurPassIndicator(
       BMScopyMemoryArray(heurdata->solcand, solcand, nindconss);
    else
       SCIP_CALL( SCIPduplicateBlockMemoryArray(scip, &(heurdata->solcand), solcand, nindconss) );
+   heurdata->obj = obj;
 
    return SCIP_OKAY;
 }
